Logo changed - need to fix margin and spacing

--- a/app/src/components/Navbar/style.css
+++ b/app/src/components/Navbar/style.css
@@ -32,3 +32,11 @@ li{
 	position:relative;
 	left: 390px;
 }
+
+#logo-img{
+	width:30%;
+}
+
+#img-link{
+	padding:0;
+}
